Prevent legend text from wrapping

--- a/ui/src/style/components/dygraphs.scss
+++ b/ui/src/style/components/dygraphs.scss
@@ -226,6 +226,8 @@
 .dygraph-legend--timestamp {
   margin-right: 8px;
   height: 30px;
+  font-size: 14px;
+  white-space: nowrap;
   line-height: 30px;
   font-weight: 600;
   color: $g13-mist;
